# Moudo

./: .gitignore  CMakeLists.txt  CythonConfig.cmake  README.md  autodo.ps1  buildToolkit.sh  main.py  miceModder.py  pyproject.toml  setup.py
devgui/Moudox/: App.xaml  App.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  Moudox.csproj  Moudox.sln  Package.appxmanifest  app.manifest
devgui/Moudox/Properties/: launchSettings.json
src/: MouseLib.pyx
src/libc/: libc.cmake
src/libc/include/: MoudoStdlib.h
src/libc/src/: CplusplusMoudo.c  nvbcc.c
src/nvidia/: Controller.cu  MiceControl.cu  RBAControl.cc  WinNTControl.cu
